# nuc_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_pkg/share/arm_pkg/: package.sh
install/astra_camera/include/astra_camera/: constants.h  dynamic_params.h  json.hpp  ob_camera_node.h  ob_camera_node_factory.h  ob_context.h  ob_timer_filter.h  ros_param_backend.h  types.h  utils.h  uvc_camera_driver.h
install/astra_camera/include/astra_camera/point_cloud_proc/: depth_traits.h  point_cloud_proc.h  point_cloud_xyz.h  point_cloud_xyzrgb.h
install/astra_camera/include/magic_enum/: magic_enum.hpp
install/astra_camera/include/openni2/: KinectProperties.h  OniCAPI.h  OniCEnums.h  OniCProperties.h  OniCTypes.h  OniEnums.h  OniPlatform.h  OniProperties.h  OniTest.h  OniVersion.h  OpenNI.h  PS1080.h  PSLink.h  PrimeSense.h  SonixCamera.h  util.h
install/astra_camera/include/openni2/Android-Arm/: OniPlatformAndroid-Arm.h
install/astra_camera/include/openni2/Driver/: OniDriverAPI.h  OniDriverTypes.h
install/astra_camera/include/openni2/Linux-Arm/: OniPlatformLinux-Arm.h
install/astra_camera/include/openni2/Linux-x86/: OniPlatformLinux-x86.h
install/astra_camera/include/openni2/MacOSX/: OniPlatformMacOSX.h
install/astra_camera/lib/OpenNI2/Drivers/: OniFile.ini  orbbec.ini
install/astra_camera/lib/astra_camera/: astra_camera_node  clean_shm_node  list_devices_node
install/astra_camera/share/astra_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/astra_camera/share/astra_camera/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  astra_cameraConfig-version.cmake  astra_cameraConfig.cmake
install/astra_camera/share/astra_camera/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/astra_camera/share/astra_camera/launch/: .gitkeep  astra.launch.xml  astra_pro.launch.xml  astro_pro_plus.launch.xml  dabai_dc1.launch.xml  dabai_dcw.launch.xml  dabai_dw.launch.xml  dabai_pro.launch.xml  dabai_u3.launch.xml  deeyea.launch.xml  embedded_s.launch.xml  embedded_u3.launch.xml  gemini.launch.xml  gemini_e.launch.xml  gemini_e_lite.launch.xml  list_devices.launch.xml  multi_astra.launch.xml  multi_dabai_dcw.launch.xml  multi_dabai_pro.launch.xml  multi_deeyea.launch.xml  multi_gemini.launch.xml  stereo_s.launch.xml  stereo_s_u3.launch.xml
install/astra_camera_msgs/share/astra_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/astra_camera_msgs/share/astra_camera_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  astra_camera_msgsConfig-version.cmake  astra_camera_msgsConfig.cmake  export_astra_camera_msgs__rosidl_generator_pyExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/astra_camera_msgs/share/astra_camera_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/camera_pkg/lib/camera_pkg/: framepublisher  pixel_to_point3d
install/camera_pkg/share/camera_pkg/: package.dsv  package.ps1  package.sh  package.xml
install/libuvc/lib/: libuvc.so.0.0.7
install/libuvc/share/libuvc/: package.sh
install/odometry/lib/odometry/: odometry_node
install/odometry/share/odometry/: package.dsv  package.ps1  package.sh  package.xml
install/odometry_pkg/lib/odometry_pkg/: odometry_node = odometry_pkg.odometry_node:mainimu_vesc_listener  odometry_node = odometry_pkg.odometry_node:mainimu_vesc_pure_pursuit_node  rpmtrue_publisher
install/odometry_pkg/share/odometry_pkg/: package.sh  package.xml
install/rover_launch_pkg/share/rover_launch_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_client  sllidar_node
install/sllidar_ros2/share/sllidar_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/xbox_control_pkg/lib/xbox_control_pkg/: control_rizz_node  double_ackermann_control_node  xbox_control_node
install/xbox_control_pkg/share/xbox_control_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/arm_pkg/: package.xml  setup.py
src/camera_pkg/: package.xml  setup.cfg  setup.py
src/camera_pkg/camera_pkg/: __init__.py  framepublisher.py  pixel_to_point3d.py  rock_color.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/arm_pkg/share/arm_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/arm_pkg/share/arm_pkg/launch/: arm.launch.py
src/log/: latest_build
src/odometry/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/odometry/launch/: odometry.launch.py
src/odometry/msg/: WheelInfo.msg  WheelRPMS.msg
src/odometry/msg/msg/msg/msg/: DirectionAngles.msg
src/odometry/odometry/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/odometry/odometry/log/: latest_build
src/odometry/src/odometry/: controller.py  efk.py  odometry_node.py  utils.py
src/odometry_pkg/: setup.py
src/odometry_pkg/general_launch/: robotlaunch.py
src/odometry_pkg/launch/: odometry.launch.py
src/odometry_pkg/odometry_pkg/: odometry_node.py  rpm_test_publisher.py
src/odometry_pkg/odometry_pkg/install/: local_setup.sh  setup.sh  setup.zsh
src/odometry_pkg/odometry_pkg/log/: latest_build
src/odometry_pkg/particular_launch/: rover.launch.py
src/rover_launch_pkg/: package.xml  setup.cfg  setup.py
src/rover_launch_pkg/launch/: rover_launch.py
src/xbox_control_pkg/: package.xml  setup.cfg  setup.py
src/xbox_control_pkg/xbox_control_pkg/: control_rizz.py  xbox_control_node.py
(+234 files in other folders)
